--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Sharbat is a Guice-like dependency injection framework for PHP. If you are notfamiliar with Guice, it suffices to know that all configurations are donethrough modules, which means there are no xml, ini or other config files.For now see the example directory to learn how to use Sharbat.Sharbat is currently not ready for production use. Although it's usable, itneeds complete test coverage.TODO:	improve constant binding	add support for recursive dependencies	write tests	write documentation
+Sharbat is a Guice-like dependency injection framework for PHP. Allconfigurations are done through modules, which means there are no xml, ini orother config files.For now see the example directory to learn how to use Sharbat.TODO:	improve constant binding	add support for recursive dependencies	write tests	write documentation
