Custom scopes, some refactoring.

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Sharbat is a Guice-like dependency injection framework for PHP. Allconfigurations are done through modules, which means there are no xml, ini orother config files.For now see the example directory to learn how to use Sharbat.TODO:	improve constant binding	add support for recursive dependencies	write tests	write documentation
+Sharbat-------Guice-like dependency injection framework for PHP.Supported annotations:- Inject- Provides- ScopeUsage-----$injector = Sharbat::createInjector(new AppModule(), new SecurityModule());$app = $injector->getInstance('Application');Configuration-------------class AppModule extends AbstractModule {	public function configure() {		$this->bind('Application')->to('WebApplication')->in(Scopes::SINGLETON);		$this->bind('Request')->toProvider('RequestProvider');		$this->bind('SomeLib')->toInstance(SomeLib::instance());		$this->bindConstant('SmartyPath')->to('/var/www/example.com/smarty');		// import bindings from another module		$this->install(new DatabaseModule());	}	/**	 * @Provides(Smarty)	 * @Scope(SingletonScope)	 */	public function provideSmarty($SmartyPath) {		require_once 'Smarty/Smarty.class.php';		$smarty = new Smarty();		$smarty->caching = 0;		$smarty->template_dir = $SmartyPath . '/templates/';		$smarty->compile_dir = $SmartyPath . '/templates_c/';		$smarty->config_dir = '';		$smarty->cache_dir = $SmartyPath . '/cache/';		$smarty->left_delimiter = '{';		$smarty->right_delimiter = '}';		return $smarty;	}}
