Edited Notes section via GitHub

--- a/README
+++ b/README
@@ -56,7 +56,7 @@ Notes
 
 - Sharbat relies on Type hinting to determine dependencies.
 - Since it is not possible to use Type hinting on fields (properties), the dependency has to be explicitly specified in this manner @Inject(MyInterface).
-- Sharbat does *not* require explicit bindings for every interface/class.
+- Sharbat does *not* require explicit bindings for every class.
 - @Inject annotation is not required on constructors and @Provides methods of modules.
 - Values of Scopes::SINGLETON and Scopes::SESSION class constants are the names of their corresponding classes 'SingletonScope' and 'SessionScope'. When using the @Scope annotation, class name must be used.
 - To override the scope of an interface or class, do not bind it to itself, but use: bind(MyClass)->in(Scopes::SESSION) or bind(MyClass)->in(Scopes::NO_SCOPE).
